--- a/client/src/PersonalDetail.scss
+++ b/client/src/PersonalDetail.scss
@@ -69,6 +69,7 @@
         justify-content: space-evenly;
         align-items: center;
         display: none;
+        padding-bottom: 5rem;
         top:3em;
         h1{
             span:last-of-type{
