--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+}
+
+html{
+  overflow-y: auto;
+  background-color: white;
 }
 
 body {
   margin: 0;
+  overflow-y: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
